hphp/hack/test/typecheck/enum_class/typing.multiple.extends.vshape.bad.php.rust_elab.exp
File "typing.multiple.extends.vshape.bad.php", line 5, characters 12-13:
`HH\BuiltinEnumClass` is an implementation internal class that cannot be used directly (Naming[2053])
File "typing.multiple.extends.vshape.bad.php", line 10, characters 12-13:
`HH\BuiltinEnumClass` is an implementation internal class that cannot be used directly (Naming[2053])
File "typing.multiple.extends.vshape.bad.php", line 17, characters 12-13:
`HH\BuiltinEnumClass` is an implementation internal class that cannot be used directly (Naming[2053])
File "typing.multiple.extends.vshape.bad.php", line 21, characters 12-13:
`HH\BuiltinEnumClass` is an implementation internal class that cannot be used directly (Naming[2053])
File "typing.multiple.extends.vshape.bad.php", line 28, characters 12-13:
`HH\BuiltinEnumClass` is an implementation internal class that cannot be used directly (Naming[2053])
File "typing.multiple.extends.vshape.bad.php", line 32, characters 12-13:
`HH\BuiltinEnumClass` is an implementation internal class that cannot be used directly (Naming[2053])
File "typing.multiple.extends.vshape.bad.php", line 39, characters 12-13:
`HH\BuiltinEnumClass` is an implementation internal class that cannot be used directly (Naming[2053])
File "typing.multiple.extends.vshape.bad.php", line 43, characters 12-13:
`HH\BuiltinEnumClass` is an implementation internal class that cannot be used directly (Naming[2053])
File "typing.multiple.extends.vshape.bad.php", line 50, characters 12-13:
`HH\BuiltinEnumClass` is an implementation internal class that cannot be used directly (Naming[2053])
File "typing.multiple.extends.vshape.bad.php", line 57, characters 12-13:
`HH\BuiltinEnumClass` is an implementation internal class that cannot be used directly (Naming[2053])
File "typing.multiple.extends.vshape.bad.php", line 63, characters 12-13:
`HH\BuiltinEnumClass` is an implementation internal class that cannot be used directly (Naming[2053])
File "typing.multiple.extends.vshape.bad.php", line 28, characters 31-32:
Some members in class `V1` are incompatible with those declared in type `E0` (Typing[4348])
  File "typing.multiple.extends.vshape.bad.php", line 7, characters 4-9:
  Expected `string`
  File "typing.multiple.extends.vshape.bad.php", line 22, characters 4-6:
  But got `int`
File "typing.multiple.extends.vshape.bad.php", line 57, characters 35-36:
Some members in class `V4` are incompatible with those declared in type `F3` (Typing[4348])
  File "typing.multiple.extends.vshape.bad.php", line 44, characters 4-9:
  Expected `string`
  File "typing.multiple.extends.vshape.bad.php", line 58, characters 4-6:
  But got `int`
File "typing.multiple.extends.vshape.bad.php", line 17, characters 35-36:
V0 cannot re-inherit constant B from F0 (Typing[4389])
  File "typing.multiple.extends.vshape.bad.php", line 17, characters 12-13:
  because it already inherited it via E0
File "typing.multiple.extends.vshape.bad.php", line 28, characters 35-36:
V1 cannot re-inherit constant B from F1 (Typing[4389])
  File "typing.multiple.extends.vshape.bad.php", line 28, characters 12-13:
  because it already inherited it via E0
File "typing.multiple.extends.vshape.bad.php", line 39, characters 35-36:
V2 cannot re-inherit constant B from F2 (Typing[4389])
  File "typing.multiple.extends.vshape.bad.php", line 39, characters 12-13:
  because it already inherited it via E0
File "typing.multiple.extends.vshape.bad.php", line 51, characters 11-11:
V3 cannot re-declare constant C (Typing[4389])
  File "typing.multiple.extends.vshape.bad.php", line 50, characters 12-13:
  because it already inherited it via F3
File "typing.multiple.extends.vshape.bad.php", line 58, characters 8-8:
V4 cannot re-declare constant C (Typing[4389])
  File "typing.multiple.extends.vshape.bad.php", line 57, characters 12-13:
  because it already inherited it via F3
File "typing.multiple.extends.vshape.bad.php", line 64, characters 11-11:
V5 cannot re-declare constant C (Typing[4389])
  File "typing.multiple.extends.vshape.bad.php", line 63, characters 12-13:
  because it already inherited it via F3
